# rancher-integration-tests

./: .zuul.yaml  README.md  README.rst  pytest.ini  setup.cfg  test-requirements.txt  tox.ini
integration/: __init__.py
integration/tests/: conftest.py
integration/tests/01_initialize/: test_add_cluster_driver.py  test_addclusterdriver.py
integration/tests/02_kontainer/: test_create_cluster.py  test_createccecluster.py
integration/tests/helpers/: __init__.py  api_client.py  base.py  fields.py  pages.py  timeouts.py
playbooks/: prepare_test_env.yaml
playbooks/rancher-kontainer/: pre.yaml  prepare_artifacts.yaml
roles/prepare-rancher-env/defaults/: main.yml
roles/prepare-rancher-env/tasks/: main.yml
roles/prepare-rancher-env/templates/: test_addclusterdriver.py.j2
roles/prepare-rancher-kontainer-artifacts/tasks/: main.yaml
tests/: test_addclusterdriver.py  test_createccecluster.py
tools/: drop_test_env.sh  prepare_test_env.sh  start_containers.sh  stop_containers.sh
