[metadata]
name = rancher-integration-tests
summary = Rancher integration tests
description-file =
    README.rst
author = multiple
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    Open Telekom Cloud, otc, T-Systems, Telekom

[files]
packages =
  integration

